changed dark mode background slightly, added dark mode background to loading screen to avoid burning eyes

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,7 @@
 $border-color: #1b2229;
 
 .Loading-wrapper {
-  background: linear-gradient(55deg, rgba(225, 230, 252, .3) 40%, rgba(212, 254, 252, .3) 80%), radial-gradient(circle, #fbf0fe 14%, #f2eff3 42%, #dbeffa 80%);
+  background: linear-gradient(55deg, rgba(225, 230, 252, .3) 40%, rgba(212, 254, 252, .3) 80%) fixed, radial-gradient(circle, #fbf0fe 14%, #f2eff3 42%, #dbeffa 80%) fixed;
   position: absolute;
   top: 0;
   bottom: 0;
@@ -88,6 +88,15 @@ $border-color: #1b2229;
 
 }
 
+@media (prefers-color-scheme: dark) {
+  .Loading-wrapper {
+    background: linear-gradient(55deg, rgba(52, 63, 111, 0.3) 40%, rgba(44, 130, 125, 0.3) 80%) fixed, radial-gradient(circle, #151a25 14%, #19151b 42%, #1d0923 100%) fixed;
+
+    .message {
+      color: rgba(255, 255, 255, .8)
+    }
+  }
+}
 
 @keyframes rotation {
   from {
