--- a/src/app/core/components/layout/header/header.component.scss
+++ b/src/app/core/components/layout/header/header.component.scss
@@ -6,6 +6,7 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
+  transition: padding .2s linear;
 
   .App-title, .App-navigation ul {
     display: flex;
@@ -98,5 +99,11 @@
       background-color: #821f26;
     }
 
+  }
+}
+
+@media screen and (max-width: 720px) {
+  .app-header {
+    padding: 0 0 0 1rem;
   }
 }
