--- a/src/styles.scss
+++ b/src/styles.scss
@@ -57,14 +57,14 @@ body, html {
 }
 
 body {
-  background: linear-gradient(55deg, rgba(225, 230, 252, .3) 40%, rgba(212, 254, 252, .3) 80%), radial-gradient(circle, #fbf0fe 14%, #f2eff3 42%, #dbeffa 80%);
+  background: linear-gradient(55deg, rgba(225, 230, 252, .3) 40%, rgba(212, 254, 252, .3) 80%) fixed, radial-gradient(circle, #fbf0fe 14%, #f2eff3 42%, #dbeffa 80%) fixed;
   overflow-y: scroll;
   font-size: 1.6rem;
 }
 
 @media (prefers-color-scheme: dark) {
   body {
-    background: linear-gradient(55deg, rgba(52, 63, 111, 0.3) 40%, rgba(44, 130, 125, 0.3) 80%), radial-gradient(circle, #353435 14%, #19151b 42%, #031925 80%);
+    background: linear-gradient(55deg, rgba(52, 63, 111, 0.3) 40%, rgba(44, 130, 125, 0.3) 80%) fixed, radial-gradient(circle, #151a25 14%, #19151b 42%, #1d0923 100%) fixed;
   }
 }
 
@@ -92,6 +92,7 @@ a {
   display: grid;
   grid-template-columns: 320px 2fr;
   grid-gap: 2rem;
+  transition: padding .2s linear;
 
   .view-header {
     text-transform: uppercase;
@@ -132,6 +133,7 @@ a {
 @media screen and (max-width: 720px) {
   .view {
     grid-template-columns: 1fr;
+    padding: 2rem 1rem
   }
 }
 
